# pano

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  bunfig.toml  index.html  package.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  deploy-pages.yaml  desktop-build.yml  release.yml
apps/desktop/: package.json
apps/desktop/scripts/: generate-icons.sh
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  notifications.rs
assets/: index-61M070VG.js  index-BMNPQyWO.js  index-ClNBLOav.js  index-I2-ne5yp.js  index-i4yEbF0-.css  query-0GDLkmRH.js  router-PuTsyGi-.js  ui-BnO7LcMU.js
docs/: ARCHITECTURE.md  TESTGRID_API_REPORT.md
src/frontend/: index.html  main.tsx
src/frontend/components/: ErrorBoundary.tsx  OfflineBanner.tsx
src/frontend/hooks/: useDesktopNotifications.ts  useOnlineStatus.ts  useSearch.ts  useTestGridApi.ts  useVirtualScroll.ts
src/frontend/lib/: api-client.ts  date.ts  storage.ts  tauri.ts
src/frontend/routes/: __root.tsx  dashboard.$dashboard.tab.$tab.tsx  dashboard.$dashboard.tsx  index.tsx  subscribed.tsx
src/frontend/stores/: filterStore.ts  subscriptionStore.ts  themeStore.ts  uiStore.ts
src/frontend/styles/: globals.css
src/shared/schemas/: dashboard.ts  grid.ts  index.ts  tab.ts  (+1 more)
testgrid-explorer/: go.mod
tests/: setup.ts
tests/frontend/: filterStore.test.ts  grid.test.ts  subscriptionStore.test.ts  useSearch.test.ts
tests/shared/: schemas.test.ts
(+26 files in other folders)
