[package]
name = "pano-desktop"
version = "0.1.0"
description = "Pano - Modern TestGrid Viewer Desktop App"
authors = ["Pano Contributors"]
edition = "2021"

[lib]
name = "pano_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
lazy_static = "1.5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
